--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose-unique-validator": "^1.0.6",
     "morgan": "^1.8.2",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2"
   },
