--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.18.1",
     "bootstrap-css-only": "^3.3.7",
     "express": "^4.15.4",
+    "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^5.0.7",
     "mongoose-unique-validator": "^1.0.6",
