--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "atob": "^2.0.3",
+    "atob": "^2.1.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -42,15 +42,16 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
     "enzyme": "^3.3.0",
+    "enzyme-adapter-react-15": "^1.0.5",
     "enzyme-adapter-react-16": "^1.1.1",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
-    "jsdom": "^11.6.2",
+    "jsdom": "^11.7.0",
     "mocha": "^5.0.1",
     "node-sass": "^4.5.3",
     "nyc": "^11.4.1",
     "sass-loader": "^6.0.6",
-    "sinon": "^4.4.2",
+    "sinon": "^4.5.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.3.0",
